file(GLOB sources_list LIST_DIRECTORIES true *)
foreach(dir ${sources_list})
    if(IS_DIRECTORY ${dir})
        get_filename_component(dir_name ${dir} NAME)
        if(NOT BUILD_HIFIVE AND dir_name STREQUAL "hifive")
            message(STATUS "Skipping build of hifive module")
            continue()
        endif()
        add_subdirectory(${dir})
    endif()
endforeach()